--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@
 .btn{
     border: none;
     outline: none;
-    background-color: #52bfb2;
+    background-color: #0059ff;
     color: white;
     border-radius: 5px;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 500;  
   }
   .text-span{
     color: #fdb641;
