--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -47,10 +47,12 @@ li {
 .dropdown-content {
   display: block;
   position: absolute;
-  background-color: #f1f1f1;
+  background-color: #ffffff;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
+  font-size: 12px;
+  border-radius: 3px;
 }
 
 .dropdown-content a {
@@ -62,6 +64,7 @@ li {
 
 .dropdown-content a:hover {
   background-color: #ddd;
+  text-decoration: none;
 }
 
 .GiHamburgerButton {
@@ -75,15 +78,11 @@ li {
     display: none;
     flex-direction: column;
     width: 100%;
-    height: 50vh;
     position: absolute;
     top: 60px;
     left: 0;
     background-color: #fff;
     border-top: 1px solid #ddd;
-  }
-  .dropdown-content a:hover {
-    background-color: #ddd;
   }
   .logo {
     height: 30px;
@@ -94,16 +93,16 @@ li {
 
   .nav-unorderlist {
     flex-direction: column;
-    height: auto;
+    width: 100%;
   }
 
   .nav-unorderlist li {
     margin: 10px 0;
-    
+    text-align: center;
   }
 
   .btn {
-    width: 0%;
+    width: 90%;
     margin: 10px auto;
   }
 
